[package]
name = "chessground"
version = "0.9.0" # remember to update html_root_url
description = "A chessboard widget for Relm/GTK"
repository = "https://github.com/niklasf/rust-chessground"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games", "gui"]
keywords = ["chess"]

[dependencies]
gtk = "0.8.0"
gdk = "0.12.0"
cairo-rs = "0.8.0"
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", rev = "b980c2c5" }
time = "0.1"
relm = "0.19"
relm-derive = "0.19"
shakmaty = "0.16.3"

[dev-dependencies]
rand = "0.6"
